flexed the nav bar

--- a/index.html
+++ b/index.html
@@ -35,26 +35,27 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-            <div class="nav__right">
-              <ul>
+            </ul>
+        </div>
+        <div class="nav__right">
+            <ul>
                 <li>
-                  <a href="#">
-                    <img
-                      width="40"
-                      src="images/shopping-cart.png"
-                      alt="shoppinng cart icon"
-                  /></a>
-                </li>
-                <li>
-                  <a href="#">
-                    <img
-                      width="40"
-                      src="images/avatar.png"
-                      alt="an avater icon"
-                  /></a>
-                </li>
+                    <a href="#">
+                        <img
+                        width="40"
+                        src="images/shopping-cart.png"
+                        alt="shoppinng cart icon"
+                        /></a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img
+                            width="40"
+                            src="images/avatar.png"
+                            alt="an avater icon"
+                            /></a>
+                        </li>
+                        <li><a href="#"><i class="fa-solid fa-bars-staggered"></i></a></li>
               </ul>
             </div>
           </div>
