completed the nav-bar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="nav__center">
               <ul>
-                <li><a href="#">Home</a></li>
+                <li class="home"><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -40,27 +40,31 @@
         <div class="nav__right">
             <ul>
                 <li>
-                    <a href="#">
+                    
                         <img
                         width="40"
                         src="images/shopping-cart.png"
                         alt="shoppinng cart icon"
-                        /></a>
+                        />
                     </li>
                     <li>
-                        <a href="#">
+                        
                             <img
                             width="40"
                             src="images/avatar.png"
                             alt="an avater icon"
-                            /></a>
+                            />
                         </li>
-                        <li><a href="#"><i class="fa-solid fa-bars-staggered"></i></a></li>
+                        <li><i class="fa-solid fa-bars-staggered"></i></li>
               </ul>
             </div>
           </div>
         </div>
-      </nav>
+      </nav> 
+
+      <section class="hero">
+
+      </section>
     </header>
     <main></main>
     <footer></footer>
