--- a/index.html
+++ b/index.html
@@ -35,35 +35,68 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Contact Us</a></li>
-            </ul>
-        </div>
-        <div class="nav__right">
-            <ul>
+              </ul>
+            </div>
+            <div class="nav__right">
+              <ul>
                 <li>
-                    
-                        <img
-                        width="40"
-                        src="images/shopping-cart.png"
-                        alt="shoppinng cart icon"
-                        />
-                    </li>
-                    <li>
-                        
-                            <img
-                            width="40"
-                            src="images/avatar.png"
-                            alt="an avater icon"
-                            />
-                        </li>
-                        <li><i class="fa-solid fa-bars-staggered"></i></li>
+                  <img
+                    width="40"
+                    src="images/shopping-cart.png"
+                    alt="shoppinng cart icon"
+                  />
+                </li>
+                <li>
+                  <img
+                    width="40"
+                    src="images/avatar.png"
+                    alt="an avater icon"
+                  />
+                </li>
+                <li><i class="fa-solid fa-bars-staggered"></i></li>
               </ul>
             </div>
           </div>
         </div>
-      </nav> 
+      </nav>
 
       <section class="hero">
-
+        <div class="hero__left">
+          <p>Easy way to order food</p>
+          <h1>
+            Choosing <span class="hero__left--orange"> healthy </span> &
+            <span class="hero__left--orange">fresh</span>pizza
+          </h1>
+          <p>
+            We offer the fastest and favorite pizza delivery services all over
+            the country. Search for your favorite pizza toppings here.
+          </p>
+          <div class="hero__left__search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <form>
+              <input type="text" value="find your pizza type" />
+              <button type="submit">search</button>
+            </form>
+            <div class="hero__left__stats">
+              <div class="hero__left__stats--grey">
+                <div><img src="images/cutlery.png" alt="" /></div>
+                <p>500+</p>
+                <p>Restaurants</p>
+              </div>
+              <div class="hero__left__stats--grey">
+                <div><img src="images/fresh-pizza.png" alt="" /></div>
+                <p>200+</p>
+                <p>pizza varieties</p>
+              </div>
+              <div class="hero__left__stats--grey">
+                <div><img src="images/star.png" alt="" /></div>
+                <p>(7.8)</p>
+                <p> pizza reviews</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hero__right"></div>
       </section>
     </header>
     <main></main>
