completed the markup for the hero section

--- a/index.html
+++ b/index.html
@@ -91,12 +91,22 @@
               <div class="hero__left__stats--grey">
                 <div><img src="images/star.png" alt="" /></div>
                 <p>(7.8)</p>
-                <p> pizza reviews</p>
+                <p>pizza reviews</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="hero__right"></div>
+        <div class="hero__right">
+          <div class="hero__right--large">
+            <img src="images/hero-pizza.png" alt="" />
+          </div>
+          <div class="hero__right--small">
+            <img src="images/pizza-1.png" alt="" />
+            <img src="images/pizza-2.png" alt="" />
+            <img src="images/pizza-3.png" alt="" />
+            <img src="images/pizza-4.png" alt="" />
+          </div>
+        </div>
       </section>
     </header>
     <main></main>
