worked on the hero section

--- a/index.html
+++ b/index.html
@@ -61,50 +61,57 @@
       </nav>
 
       <section class="hero">
-        <div class="hero__left">
-          <p>Easy way to order food</p>
-          <h1>
-            Choosing <span class="hero__left--orange"> healthy </span> &
-            <span class="hero__left--orange">fresh</span>pizza
-          </h1>
-          <p>
-            We offer the fastest and favorite pizza delivery services all over
-            the country. Search for your favorite pizza toppings here.
-          </p>
-          <div class="hero__left__search">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <form>
-              <input type="text" value="find your pizza type" />
-              <button type="submit">search</button>
-            </form>
-            <div class="hero__left__stats">
-              <div class="hero__left__stats--grey">
-                <div><img src="images/cutlery.png" alt="" /></div>
-                <p>500+</p>
-                <p>Restaurants</p>
+        <div class="container">
+          <div class="hero__container">
+            <div class="hero__left">
+              <p><strong>Easy way to order food </strong></p>
+              <h1>
+                Choosing <span class="hero__left--orange"> healthy </span> &
+                <span class="hero__left--orange">fresh </span> pizza
+              </h1>
+              <p>
+                We offer the fastest and favorite pizza delivery services all
+                over the country. Search for your favorite pizza toppings here.
+              </p>
+              <div class="hero__left__search">
+                <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+                <form>
+                  <input type="text" value="find your pizza type" />
+                  <button type="submit">search</button>
+                </form>
               </div>
-              <div class="hero__left__stats--grey">
-                <div><img src="images/fresh-pizza.png" alt="" /></div>
-                <p>200+</p>
-                <p>pizza varieties</p>
-              </div>
-              <div class="hero__left__stats--grey">
-                <div><img src="images/star.png" alt="" /></div>
-                <p>(7.8)</p>
-                <p>pizza reviews</p>
+              <div class="hero__left__stats">
+                <div class="hero__left__stats--grey">
+                  <div><img src="images/cutlery.png" alt="" width="50" /></div>
+                  <p>500+</p>
+                  <p>Restaurants</p>
+                </div>
+                <div class="hero__left__stats--grey">
+                  <div>
+                    <img src="images/fresh-pizza.png" alt="" width="50" />
+                  </div>
+                  <p>200+</p>
+                  <p>pizza varieties</p>
+                </div>
+                <div class="hero__left__stats--grey">
+                  <div><img src="images/star.png" alt="" width="50" /></div>
+                  <p>(7.8)</p>
+                  <p>pizza reviews</p>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="hero__right">
-          <div class="hero__right--large">
-            <img src="images/hero-pizza.png" alt="" />
-          </div>
-          <div class="hero__right--small">
-            <img src="images/pizza-1.png" alt="" />
-            <img src="images/pizza-2.png" alt="" />
-            <img src="images/pizza-3.png" alt="" />
-            <img src="images/pizza-4.png" alt="" />
+
+            <div class="hero__right">
+              <div class="hero__right--large">
+                <img src="images/hero-pizza.png" alt="" />
+              </div>
+              <div class="hero__right--small">
+                <img src="images/pizza-1.png" alt="" width="250" />
+                <img src="images/pizza-2.png" alt="" width="150" />
+                <img src="images/pizza-3.png" alt="" width="150" />
+                <img src="images/pizza-4.png" alt="" width="150" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
